# steam-runtime-tools

./: .editorconfig  .gitlab-ci.yml  CONTRIBUTING.md  Makefile.am  README.md  configure.ac  main.c  meson.build  meson_options.txt  xisxwayland.1  xisxwayland.c
.gitlab/merge_request_templates/: merge_request.md
.reuse/: dep5
build-aux/: many-builds.py  scout-builds.py  scout-layered.sh
build-aux/meson/: clang.txt  i386.txt
ci/: autopkgtest.sh  gitlab-ci.yml  prepare-arch.sh  prepare-deb.sh  scout.sources.list
debian/: .gitignore  changelog  control  gitlab-ci.yml  libsteam-runtime-tools-0-0.symbols  libsteam-runtime-tools-0-helpers.install  pressure-vessel-relocatable.install  rules  steam-runtime-tools-bin.install  steam-runtime-tools-bin.links  steam-runtime-tools-minimal.install  steam-runtime-tools-ui.install
docs/: container-runtime.md  distro-assumptions.md  ld-library-path-runtime.md  pressure-vessel.md  shared-paths.md  slr-for-game-developers.md  steam-compat-tool-interface.md
helpers/: check-gl.c  check-locale.c  check-va-api.c  check-vulkan.c  check-xdg-portal.c  inspect-library-libelf.c  inspect-library-utils.c  inspect-library-utils.h  inspect-library.c  is-x-server-xwayland.c  meson.build  wflinfo.c
helpers/haswell/: meson.build
helpers/i386/: meson.build
helpers/i486/: meson.build
helpers/i586/: meson.build
helpers/lib/: meson.build
helpers/lib32/: meson.build
helpers/lib64/: meson.build
helpers/multiarch/: meson.build
helpers/xeon_phi/: meson.build
libcurl-compat/: compat-setup.c  meson.build
pressure-vessel/: CONTRIBUTING.md  README.md  adverb-preload.c  adverb-preload.h  adverb-sdl.c  adverb-sdl.h  adverb.1.md  adverb.c  build-relocatable-install.py  bwrap-lock.c  bwrap.c  bwrap.h  exports.c  exports.h  flatpak-bwrap-private.h  flatpak-bwrap.c  flatpak-common-types-private.h  flatpak-context-private.h  flatpak-error.h  flatpak-exports-private.h  flatpak-exports.c  flatpak-glib-backports-private.h  flatpak-glib-backports.c  flatpak-metadata-private.h  flatpak-portal.h  flatpak-run-dbus-private.h  flatpak-run-dbus.c  flatpak-run-private.h  flatpak-run-pulseaudio-private.h  flatpak-run-pulseaudio.c  flatpak-run-sockets-private.h  flatpak-run-sockets.c  flatpak-run-wayland-private.h  flatpak-run-wayland.c  flatpak-run-x11-private.h  flatpak-run-x11.c  flatpak-run.c  flatpak-session-helper.h  flatpak-utils-base-private.h  flatpak-utils-base.c  (+39 more)
steam-runtime-tools/: architecture-internal.h  architecture.c  bwrap-internal.h  bwrap.c  bwrap.h  container-internal.h  container.c  container.h  direct-input-device.c  display-internal.h  display.c  display.h  elf-utils-internal.h  elf-utils.c  env-overlay-internal.h  env-overlay.c  file-lock-internal.h  file-lock.c  glib-backports-internal.h  glib-backports.c  graphics-drivers-dri.c  graphics-drivers-egl.c  graphics-drivers-from-report.c  graphics-drivers-glx.c  graphics-drivers-internal.h  graphics-drivers-json-based-internal.h  graphics-drivers-json-based.c  graphics-drivers-vaapi.c  graphics-drivers-vdpau.c  graphics-drivers-vulkan.c  graphics-drivers-vulkan.h  graphics-drivers.c  graphics-internal.h  graphics-runtime-openxr-1.c  graphics-runtime-openxr-1.h  graphics-runtime-openxr.c  graphics-runtime-openxr.h  graphics.c  input-device-internal.h  input-device.c  (+58 more)
subprojects/: README.md
subprojects/container-runtime/: README.md  SteamLinuxRuntime_whatever.sh.in  populate-depot.py
subprojects/xisxwayland/: .editorconfig  README.md  main.c  meson.build  xisxwayland.1
subprojects/xisxwayland/test/: fakexlib.c  fakexlib.h
test/: fakexlib.c  fakexlib.h  test-xisxwayland.c
tests/: CapsuleTest.pm  adverb.c  architecture-internals.c  capture-libs.pl  container.c  dialog-ui.py  display.c  env-overlay.c  file-lock.c  find-myself.c  generate-sysroots.py  graphics.c  helper.c  identify-library-abi-cli.c  input-device.c  libc-utils.c  library.c  logger-0.sh  logger-procsubst.sh  meson.build  mock-capsule-capture-libs.c  mypy.sh  os-release.c  process-manager.c  pycodestyle.sh  pyflakes.sh  resolve-in-sysroot.c  shellcheck.sh  system-info-cli.c  system-info.c  test-init.c  test-launcher.py  test-logger.py  test-run-outside-ldlp.py  test-supervisor.py  test-utils.py  utils.c  valgrind.sh  valgrind.supp  version.pl  (+2 more)
tests/pressure-vessel/: adverb-preload.c  adverb-sdl.c  adverb.py  bwrap-lock.c  bwrap.c  containers.py  graphics-provider.c  inside-runtime.py  launcher.py  meson.build  prepare-test-depots.sh  relocatable-install.py  test-locale-gen.sh  utils.c  utils.py  verify.py  wait-for-child-processes.c  wrap-setup.c
utils/: capture-libs.c  debug.h  library-cmp.c  print-libstubs.c  print-version.c  utils.c  utils.h
(+52 files in other folders)
